--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+/* Roboto Font */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,500&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
